--- a/src/RequestPrintUser/HomeUser.form
+++ b/src/RequestPrintUser/HomeUser.form
@@ -210,6 +210,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Book List"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BookListMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
