--- a/src/RequestPrintUser/Userprofile.form
+++ b/src/RequestPrintUser/Userprofile.form
@@ -40,13 +40,20 @@
                           <Component id="Email" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="Edit" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="Next" min="-2" max="-2" attributes="0"/>
-                          <Component id="NameLabel" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
-                          <Component id="SurnameLabel" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
-                          <Component id="EmailLabel" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
-                          <Component id="PhoneLabel" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
+                              <Component id="Next" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="SurnameLabel" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                  <Component id="NameLabel" min="-2" pref="100" max="-2" attributes="0"/>
+                                  <Component id="EmailLabel" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                  <Component id="PhoneLabel" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace min="0" pref="98" max="32767" attributes="0"/>
                   </Group>
@@ -81,7 +88,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="Phone" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PhoneLabel" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
+                  <Component id="PhoneLabel" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
